grafana/mimir/generated/grafana-mimir/templates/gateway/service.yaml
---
# Source: grafana-mimir/templates/gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-gateway
  namespace: "grafana-mimir"
  labels:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: grafana-mimir
    app.kubernetes.io/version: 1.27.0
    helm.sh/chart: grafana-mimir-1.2.10
    app.kubernetes.io/part-of: grafana-mimir
    app.kubernetes.io/component: gateway
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: http
      port: 80
      targetPort: http
      nodePort: null
  selector:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/name: grafana-mimir
    app.kubernetes.io/part-of: grafana-mimir
    app.kubernetes.io/component: gateway
